# nes-emulator

./: CMakeLists.txt  Makefile  README.md
src/: CPU.cpp  main.cpp
